--- a/index.ipynb
+++ b/index.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        " 'Pyeongchang']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        " 'South Korea']"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,25 +134,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "top_travel_cities = ['Solta', 'Greenville', 'Buenos Aires', 'Los Cabos', 'Walla Walla Valley', 'Marakesh', 'Albuquerque', 'Archipelago Sea', 'Iguazu Falls', 'Salina Island', 'Toronto', 'Pyeongchang']"
+    "top_travel_cities = ['Solta', 3, 'Buenos Aires', 'Los Cabos', 'Walla Walla Valley', 'Marakesh', 'Albuquerque', 'Archipelago Sea', 'Iguazu Falls', 'Salina Island', 'Toronto', 'Pyeongchang']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['Solta',\n",
-       " 'Greenville',\n",
+       " 3,\n",
        " 'Buenos Aires',\n",
        " 'Los Cabos',\n",
        " 'Walla Walla Valley',\n",
@@ -165,7 +163,7 @@
        " 'Pyeongchang']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,10 +174,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "countries_of_top_cities = ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'New Mexico', 'Finland', 'Argentina', 'Italy', 'Canada', 'South Korea']"
@@ -211,39 +207,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Solta',\n",
-       " 'Greenville',\n",
-       " 'Buenos Aires',\n",
-       " 'Los Cabos',\n",
-       " 'Walla Walla Valley',\n",
-       " 'Marakesh',\n",
-       " 'Albuquerque',\n",
-       " 'Archipelago Sea',\n",
-       " 'Iguazu Falls',\n",
-       " 'Salina Island',\n",
-       " 'Toronto',\n",
-       " 'Pyeongchang']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "top_travel_cities"
+    "### top_travel_cities"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +224,7 @@
        "'Solta'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,22 +244,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Buenos Aires'"
+       "'Walla Walla Valley'"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_travel_cities[2]"
+    "top_travel_cities[4]"
    ]
   },
   {
@@ -299,22 +271,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Pyeongchang'"
+       "'Toronto'"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_travel_cities[-1]"
+    "top_travel_cities[-2]"
    ]
   },
   {
@@ -326,22 +298,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Toronto'"
+       "'Iguazu Falls'"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_travel_cities[-2]"
+    "top_travel_cities[-4]"
    ]
   },
   {
@@ -374,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -383,13 +355,13 @@
        "str"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(top_canadian_city)"
+    "type(top_travel_cities[0])"
    ]
   },
   {
@@ -432,22 +404,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "list"
+       "int"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(top_travel_cities)"
+    "type(top_travel_cities[1])"
    ]
   },
   {
@@ -466,16 +438,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Solta', 'Greenville']"
+       "['Solta', 3]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,14 +467,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['Solta',\n",
-       " 'Greenville',\n",
+       " 3,\n",
        " 'Buenos Aires',\n",
        " 'Los Cabos',\n",
        " 'Walla Walla Valley',\n",
@@ -515,7 +487,7 @@
        " 'Pyeongchang']"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +514,7 @@
        "['Walla Walla Valley']"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,23 +597,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Solta', 'Greenville']"
+       "['Toronto', 'Pyeongchang']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_two = top_travel_cities[0:2]\n",
-    "top_two"
+    "bottom_two=top_travel_cities[10:12]\n",
+    "bottom_two"
    ]
   },
   {
@@ -667,10 +639,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 55,
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_travel_cities.append('San Antonio')"
@@ -685,14 +655,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['Solta',\n",
-       " 'Greenville',\n",
+       " 3,\n",
        " 'Buenos Aires',\n",
        " 'Los Cabos',\n",
        " 'Walla Walla Valley',\n",
@@ -703,10 +673,12 @@
        " 'Salina Island',\n",
        " 'Toronto',\n",
        " 'Pyeongchang',\n",
+       " 'Orlando',\n",
+       " 'Orlando',\n",
        " 'San Antonio']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,14 +696,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['Solta',\n",
-       " 'Greenville',\n",
+       " 3,\n",
        " 'Buenos Aires',\n",
        " 'Los Cabos',\n",
        " 'Walla Walla Valley',\n",
@@ -742,11 +714,15 @@
        " 'Salina Island',\n",
        " 'Toronto',\n",
        " 'Pyeongchang',\n",
+       " 'Orlando',\n",
+       " 'Orlando',\n",
+       " 'San Antonio',\n",
+       " 'San Antonio',\n",
        " 'San Antonio',\n",
        " 'San Antonio']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +750,7 @@
        "'San Antonio'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,16 +768,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Walla Walla Valley'"
+       "'Washington DC'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,28 +788,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 72,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "top_travel_cities[4] = 4"
+    "top_travel_cities[4] = 'Denver'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['Solta',\n",
-       " 'Greenville',\n",
+       " 3,\n",
        " 'Buenos Aires',\n",
        " 'Los Cabos',\n",
-       " 4,\n",
+       " 'Denver',\n",
        " 'Marakesh',\n",
        " 'Albuquerque',\n",
        " 'Archipelago Sea',\n",
@@ -841,10 +815,12 @@
        " 'Salina Island',\n",
        " 'Toronto',\n",
        " 'Pyeongchang',\n",
+       " 'Orlando',\n",
+       " 'Washington DC',\n",
        " 'San Antonio']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,10 +838,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 74,
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_travel_cities[4] = 'Walla Walla Valley'"
@@ -880,14 +854,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['Solta',\n",
-       " 'Greenville',\n",
+       " 3,\n",
        " 'Buenos Aires',\n",
        " 'Los Cabos',\n",
        " 'Walla Walla Valley',\n",
@@ -898,10 +872,12 @@
        " 'Salina Island',\n",
        " 'Toronto',\n",
        " 'Pyeongchang',\n",
+       " 'Orlando',\n",
+       " 'Washington DC',\n",
        " 'San Antonio']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,13 +902,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 99,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "top_travel_cities.append('Solta')"
+    "top_travel_cities.append('Los Cabos')"
    ]
   },
   {
@@ -951,28 +925,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Albuquerque',\n",
+       "{3,\n",
+       " 'Albuquerque',\n",
        " 'Archipelago Sea',\n",
        " 'Buenos Aires',\n",
-       " 'Greenville',\n",
+       " 'Iguaza Falls',\n",
        " 'Iguazu Falls',\n",
        " 'Los Cabos',\n",
        " 'Marakesh',\n",
+       " 'Orlando',\n",
        " 'Pyeongchang',\n",
        " 'Salina Island',\n",
        " 'San Antonio',\n",
        " 'Solta',\n",
        " 'Toronto',\n",
-       " 'Walla Walla Valley'}"
+       " 'Walla Walla Valley',\n",
+       " 'Washington DC'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -991,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +977,7 @@
        "set"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,19 +995,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'set' object does not support indexing",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m-------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-3d2453cad46e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0munique_travel_cities\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'set' object does not support indexing"
-     ]
+     "data": {
+      "text/plain": [
+       "'Salina Island'"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1046,16 +1022,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "set"
+       "list"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,10 +1049,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 103,
+   "metadata": {},
    "outputs": [],
    "source": [
     "unique_travel_cities = list(unique_travel_cities)"
@@ -1084,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1067,7 @@
        "list"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,28 +1085,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Toronto',\n",
-       " 'Archipelago Sea',\n",
-       " 'Iguazu Falls',\n",
-       " 'Pyeongchang',\n",
-       " 'Los Cabos',\n",
-       " 'Buenos Aires',\n",
-       " 'Marakesh',\n",
-       " 'Greenville',\n",
-       " 'Albuquerque',\n",
+       "['Solta',\n",
        " 'Salina Island',\n",
-       " 'Walla Walla Valley',\n",
+       " 3,\n",
+       " 'Marakesh',\n",
+       " 'Archipelago Sea',\n",
+       " 'Pyeongchang',\n",
        " 'San Antonio',\n",
-       " 'Solta']"
+       " 'Albuquerque',\n",
+       " 'Toronto',\n",
+       " 'Iguaza Falls',\n",
+       " 'Buenos Aires',\n",
+       " 'Los Cabos',\n",
+       " 'Walla Walla Valley',\n",
+       " 'Washington DC',\n",
+       " 'Orlando',\n",
+       " 'Iguazu Falls']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,16 +1127,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13"
+       "16"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,16 +1147,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14"
+       "25"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,35 +1167,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['Solta',\n",
-       " 'Greenville',\n",
+       " 'Salina Island',\n",
+       " 3,\n",
+       " 'Marakesh',\n",
+       " 'Archipelago Sea',\n",
+       " 'Pyeongchang',\n",
+       " 'San Antonio',\n",
+       " 'Albuquerque',\n",
+       " 'Toronto',\n",
+       " 'Iguaza Falls',\n",
        " 'Buenos Aires',\n",
        " 'Los Cabos',\n",
        " 'Walla Walla Valley',\n",
-       " 'Marakesh',\n",
-       " 'Albuquerque',\n",
-       " 'Archipelago Sea',\n",
-       " 'Iguazu Falls',\n",
-       " 'Salina Island',\n",
-       " 'Toronto',\n",
-       " 'Pyeongchang',\n",
-       " 'San Antonio',\n",
-       " 'Solta']"
+       " 'Washington DC',\n",
+       " 'Orlando',\n",
+       " 'Iguazu Falls']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_travel_cities"
+    "unique_travel_cities"
    ]
   },
   {
@@ -1254,14 +1233,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
